FROMLIST: vhost: fix vhost ioctl signature to build with clang

Clang is particularly anal about signed vs unsigned comparisons and
doesn't like the fact that some ioctl numbers set the MSB, so we get
this error when trying to build vhost on aarch64:

v4.4/drivers/vhost/vhost.c:793:7: error: overflow converting case value to
switch condition type (3221794578 to 18446744072636378898) [-Werror,-Wswitch]
        case VHOST_GET_VRING_BASE:

Fix this by using unsigned ints in the function signature for
vhost_vring_ioctl().

BUG=chromium:763790
TEST=build caroline with USE=kvm_host

Change-Id: Id3e5bfe7aaa3a87926971aae230477ce73f7e5ed
(am from https://patchwork.kernel.org/patch/10283019/)
Signed-off-by: Sonny Rao <sonnyrao@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/854775
Reviewed-by: Dylan Reid <dgreid@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/1058979
Reviewed-by: Guenter Roeck <groeck@chromium.org>